--- a/Layouts/main.css
+++ b/Layouts/main.css
@@ -1,3 +1,5 @@
+@import url("../Products/products.css");
+
 body {
     margin: 0;
     padding: 0;
@@ -9,15 +11,27 @@ body {
     justify-content: center;
 }
 
-section {
-    height: 90%;
-}
-
 footer {
     width: 100%;
     position: fixed;
     bottom: 0;
-    border: 1px solid red;
     background-color: black;
     max-height: 70px;
+}
+
+header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 10;
+}
+
+#footer {
+    font-size: 10px;
+    padding: 10px;
+}
+
+.content {
+    margin: 100px 0;
+    padding-top: 60px;
 }
